--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: "io.fabric"
 
 import com.android.build.OutputFile
 
@@ -168,8 +169,10 @@ dependencies {
     compile 'com.google.firebase:firebase-core:15.0.0'
     compile 'com.google.firebase:firebase-firestore:15.0.0'
     implementation "com.google.firebase:firebase-auth:15.0.0"
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
+    transitive = true
+  }
     compile project(':react-native-smart-splashscreen')
-
 }
 
 // Run this once to be able to run the application with BUCK
