--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,12 +2,16 @@
 
 buildscript {
     repositories {
-        jcenter()
         google()
+        jcenter()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
+        classpath 'com.google.gms:google-services:3.2.1'
         classpath 'com.android.tools.build:gradle:3.1.1'
-        classpath 'com.google.gms:google-services:3.1.1'
+        classpath 'io.fabric.tools:gradle:1.25.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -16,7 +20,6 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
-        jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
@@ -29,5 +32,6 @@ allprojects {
             url "https://maven.google.com" // Google's Maven repository
         }
         google()
+        jcenter()
     }
 }
